QuadBez, PathSeg, PathSeg, tests passed, examples works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ set(KURBO_SOURCES
     src/kurbo/affine.cpp
     src/kurbo/translate_scale.cpp
     src/kurbo/param_curve.cpp
+    src/kurbo/path_el.cpp
+    src/kurbo/quadbez.cpp
 )
 
 add_library(kurbo STATIC ${KURBO_SOURCES})
@@ -61,6 +63,8 @@ add_executable(kurbo_tests
     tests/test_ellipse.cpp
     tests/test_triangle.cpp
     tests/test_param_curve.cpp
+    tests/test_quadbez.cpp
+    tests/test_path_el.cpp
 )
 
 target_link_libraries(kurbo_tests
@@ -84,6 +88,8 @@ add_test(NAME CircleTests COMMAND kurbo_tests --gtest_filter=CircleTest*)
 add_test(NAME EllipseTests COMMAND kurbo_tests --gtest_filter=EllipseTest*)
 add_test(NAME TriangleTests COMMAND kurbo_tests --gtest_filter=TriangleTest*)
 add_test(NAME ParamCurveTests COMMAND kurbo_tests --gtest_filter=ParamCurveTest*)
+add_test(NAME QuadBezTests COMMAND kurbo_tests --gtest_filter=QuadBezTest*)
+add_test(NAME PathElTests COMMAND kurbo_tests --gtest_filter=PathElTest*)
 
 # Create examples directory if it doesn't exist
 if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/examples)
@@ -125,6 +131,34 @@ target_link_libraries(example_ellipse kurbo)
 # Example: Ellipse debug
 add_executable(example_ellipse_debug examples/ellipse_debug.cpp)
 target_link_libraries(example_ellipse_debug kurbo)
+
+# Example: Rect operations
+add_executable(example_rect examples/rect_example.cpp)
+target_link_libraries(example_rect kurbo)
+
+# Example: RoundedRect operations
+add_executable(example_rounded_rect examples/rounded_rect_example.cpp)
+target_link_libraries(example_rounded_rect kurbo)
+
+# Example: Affine operations
+add_executable(example_affine examples/affine_example.cpp)
+target_link_libraries(example_affine kurbo)
+
+# Example: TranslateScale operations
+add_executable(example_translate_scale examples/translate_scale_example.cpp)
+target_link_libraries(example_translate_scale kurbo)
+
+# Example: ParamCurve operations
+add_executable(example_param_curve examples/param_curve_example.cpp)
+target_link_libraries(example_param_curve kurbo)
+
+# Example: QuadBez operations
+add_executable(example_quadbez examples/quadbez_example.cpp)
+target_link_libraries(example_quadbez kurbo)
+
+# Example: PathEl operations
+add_executable(example_path_el examples/path_el_example.cpp)
+target_link_libraries(example_path_el kurbo)
 
 # Install rules
 install(TARGETS kurbo
