Add QuadSpline implementation and tests
- Added quadspline.hpp and quadspline.cpp
- Implemented QuadSpline as a quadratic B-spline sequence
- Added iterator for implied QuadBez sequence
- Added operator== for iterator to support GTest and STL
- Added tests based on Rust tests (QuadSplineTest)
- All tests passing with Ninja build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(KURBO_SOURCES
     src/kurbo/param_curve.cpp
     src/kurbo/path_el.cpp
     src/kurbo/quadbez.cpp
+    src/kurbo/quadspline.cpp
 )
 
 add_library(kurbo STATIC ${KURBO_SOURCES})
